# AskDocs

./: .env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 09ff78bc174c_initial_tables.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  chat.py  docs.py
app/core/: config.py  logging.py  ratelimit.py  security.py
app/db/: base.py  session.py
app/models/: chunk.py  document.py  user.py
app/schemas/: document.py  user.py
app/services/: ingestion.py  rag.py
app/services/embeddings/: base.py  factory.py  openai.py  stub.py
app/services/llm/: base.py  factory.py  openai.py  stub.py
app/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_api.py
